# bigquery-mcp

./: .gitignore  Dockerfile  README.md  gha-creds-3628d04f937fcd78.json  main.py  pyproject.toml  server.json
.github/workflow/: test.yml
.github/workflows/: issues.yml  publish-mcp.yml  release.yml  test.yml  update_main.yml
src/bigquery_mcp/: config.py  main.py  server.py
tests/: coverage.txt  test_server.py
