[project]
name = "sl-bigquery-mcp"
version = "0.1.2"
description = "A Model Context Protocol (MCP) server that provides access to BigQuery."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.5.2",
    "google-cloud-bigquery>=3.33.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["tests/coverage.svg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[project.scripts]
sl-bigquery-mcp = "bigquery_mcp.main:main"
